Angular frontend practice with ngrx store

--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngrx/effects": "^14.3.2",
+    "@ngrx/entity": "^14.3.2",
+    "@ngrx/store": "^14.3.2",
+    "@ngrx/store-devtools": "^14.3.2",
+    "@types/lodash.clonedeep": "^4.5.7",
+    "bootstrap": "^5.2.2",
+    "lodash.clonedeep": "^4.5.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
